# FeedReader

./: CMakeLists.txt  circle.yml
docker/: Dockerfile  Dockerfile.Feedbin  supervisord.conf  update_image.sh
plugins/backend/bazqux/: CMakeLists.txt
plugins/backend/demo/: CMakeLists.txt
plugins/backend/feedbin/: CMakeLists.txt  TestFeedbin.vala  TestFeedbinAPI.vala  feedbinAPI.vala  feedbinInterface.vala
plugins/backend/feedhq/: CMakeLists.txt
plugins/backend/feedly/: CMakeLists.txt
plugins/backend/fresh/: CMakeLists.txt
plugins/backend/inoreader/: CMakeLists.txt
plugins/backend/local/: CMakeLists.txt
plugins/backend/oldreader/: CMakeLists.txt
plugins/backend/owncloud/: CMakeLists.txt
plugins/backend/ttrss/: CMakeLists.txt
plugins/share/Browser/: CMakeLists.txt
plugins/share/Email/: CMakeLists.txt
plugins/share/Instapaper/: CMakeLists.txt
plugins/share/Pocket/: CMakeLists.txt
plugins/share/Telegram/: CMakeLists.txt
plugins/share/Twitter/: CMakeLists.txt
plugins/share/Wallabag/: CMakeLists.txt
